I had oclib to use csv file.

--- a/configure.ac
+++ b/configure.ac
@@ -4,6 +4,7 @@ AC_CANONICAL_TARGET
 AM_INIT_AUTOMAKE
 
 LT_INIT([win32-dll])
+AC_CONFIG_SUBDIRS([oclib])
 AC_CONFIG_MACRO_DIRS([m4])
 
 LT_LANG([Windows Resource])
